headless/deploy/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: headless:test
          command:
            - './server'
          workingDir: /
          ports:
            - containerPort: 8080
              protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: server
spec:
  selector:
    app: server
#  clusterIP: None
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: grpc-server
